# fpl-team-picker

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_ORGANIZATION_REVIEW.md  GAMEWEEK_MANAGER_GUIDE.md  MIGRATION_PLAN.md  ML_XP_IMPROVEMENT_PLAN.md  ML_XP_MODEL.md  README.md  RETRO_ANALYSIS_GUIDE.md  TPOT_SETUP.md  TRANSFER_OPTIMIZER_ROADMAP.md  XP_MODEL_IMPROVEMENTS.md  config_example.json  debug_squad_form.py  dynamic_team_strength.py  fixture_difficulty_viz.py  fpl_data_loader.py  fpl_gameweek_manager.py  fpl_gameweek_manager_backup.py  fpl_optimization.py  fpl_retro_analysis.py  fpl_rules.md  fpl_utils.py  fpl_visualization.py  fpl_xp_model.py  prediction_storage.py  pyproject.toml  start-mcp-server.sh  switch_model.py  test_dynamic_team_strength.py  test_form_analytics_fix.py  test_xp_improvements.py  xp_model.py
.claude/agents/: fpl-data-scientist.md
.github/workflows/: claude.yaml  test.yml
data/: afcon_2025_players.json
data/calibration/: categorized_data.csv  distributions.json
docs/: ALGORITHM_ANALYSIS_REPORT.tex  EMBEDDING_AI_ANALYSIS.tex  LP_VS_SA_ANALYSIS.md  MCP_SETUP.md  RECIPE_ADDING_NEW_FEATURES.md  SA_STABILITY_GUIDE.md  WILDCARD_OPTIMIZATION.md  fpl_rules.md  gameweek_manager_presentation.md  gameweek_manager_technical.md  missing_data_sources_analysis.md
docs/ROADMAP/: OPTIMIZATION_GAPS_AND_ADDITIONS.md  OPTIMIZATION_UPGRADE_2025_26.md
evals/: README.md  __init__.py  quick_example.py  run_transfer_evals.py
evals/datasets/: __init__.py  transfer_planning_scenarios.py
evals/evaluators/: __init__.py  transfer_quality.py
experiments/: FINAL_MODEL_COMPARISON.md  FPL_SCORER_ANALYSIS.md  GW10_SUMMARY.md  HAULER_STRATEGY_IMPLEMENTATION.md  HYPOTHESIS_POSITION_AWARE_SCORER.md  ML_OPTIMIZATION_PIPELINE.md  POSITION_SPECIFIC_MODELS_EXPERIMENT.md  PROBABILISTIC_XP_CALIBRATION_FINAL_PLAN.md  TPOT_SETUP.md  algorithm_comparison_experiment.py  bench_warmer_filtering_experiment.py  hyperparameter_tuning_experiment.py  hyperparameter_tuning_valid_folds.py  ml_architecture_analysis.py  train_tpot_position_aware.py
experiments/feature_importance_output/: high_correlations.csv  mdi_importance.csv  permutation_importance.csv
fpl_team_picker/: __init__.py
fpl_team_picker/adapters/: __init__.py  (+1 more)
predictions/: gw1_metadata_20250817_214524.json  gw1_optimal_team_20250817_214524.json  gw1_predictions_20250817_214524.csv
scripts/: README.md  README_FEATURE_IMPORTANCE.md  README_MULTI_GW_AGENT.md  README_custom_pipeline_optimizer.md  analyze_calibration_data.py  analyze_top_player.py  build_calibration_distributions.py  compare_all_models.py  compare_models.py  compare_models_position_aware.py  compare_prediction_distributions.py  custom_pipeline_optimizer.py  custom_scorers.py  evaluate_tpot_model.py  feature_importance_analysis.py  fetch_top_manager_ids.py  gw_by_gw_analysis.py  ml_training_utils.py  multi_gw_agent.py  position_aware_scorer.py  position_specific_optimizer.py  test_enhanced_features.py  tpot_pipeline_optimizer.py  train_model.py  transfer_recommendation_agent.py
tests/: __init__.py
(+304 files in other folders)
