[project]
name = "fpl-team-picker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.14.16",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "requests>=2.31.0",
    "seaborn>=0.13.2",
    "fpl-dataset-builder",
    "plotly>=6.3.0",
    "ruff>=0.12.10",
]

[dependency-groups]
dev = []

[tool.uv.sources]
fpl-dataset-builder = { path = "../fpl-dataset-builder", editable = true }
