[project]
name = "fpl-team-picker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.15.2",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "requests>=2.31.0",
    "seaborn>=0.13.2",
    "fpl-dataset-builder",
    "plotly>=6.3.0",
    "ruff>=0.12.10",
    "fpl-team-picker",
    "xgboost>=3.0.5",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "vulture>=2.14",
]

[project.scripts]
fpl-season-planner = "fpl_team_picker.interfaces.season_planner:main"
fpl-gameweek-manager = "fpl_team_picker.interfaces.gameweek_manager:main"
fpl-ml-experiment = "fpl_team_picker.interfaces.ml_xp_experiment:main"

[tool.uv]
package = true

[tool.uv.sources]
fpl-dataset-builder = { path = "../fpl-dataset-builder", editable = true }
fpl-team-picker = { path = ".", editable = true }
