[project]
name = "fpl-team-picker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo[mcp]>=0.17.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.0",
    "pytest>=8.0.0",
    "requests>=2.31.0",
    "seaborn>=0.13.2",
    "fpl-dataset-builder",
    "plotly>=6.3.0",
    "ruff>=0.12.10",
    "fpl-team-picker",
    "xgboost>=3.0.5",
    "scikit-learn>=1.7.2",
    "anthropic>=0.69.0",
    "statsmodels>=0.14.5",
    "lightgbm>=4.6.0",
    "tpot>=1.1.0",
    "setuptools>=75.0.0",
    "bokeh>=3.8.0",
    "catboost>=1.2.8",
    "altair>=5.5.0",
    "shap>=0.49.1",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "vulture>=2.14",
]

[project.scripts]
fpl-season-planner = "fpl_team_picker.interfaces.season_planner:main"
fpl-gameweek-manager = "fpl_team_picker.interfaces.gameweek_manager:main"
fpl-ml-experiment = "fpl_team_picker.interfaces.ml_xp_experiment:main"
fpl-xp-accuracy = "fpl_team_picker.interfaces.xp_accuracy_tracking:main"

[tool.setuptools]
packages = ["fpl_team_picker"]

[tool.uv]
package = true

[tool.uv.sources]
fpl-dataset-builder = { path = "../fpl-dataset-builder", editable = true }
fpl-team-picker = { path = ".", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
